# mmorpg-prototype-game-server

./: .clang-format  .env.example  CMakeLists.txt  Dockerfile  Dockerfile.dev  LOGGING_GUIDE.md  NPC_SYSTEM_DOCUMENTATION.md  NPC_SYSTEM_GUIDE.md  README.md  SKILL_SYSTEM_GUIDE.md  TODO.MD  changelog.md  config.json  copy_includes.sh  docker-compose.dev.yml  docker-compose.yml  usefull_info.txt  watch_and_run.sh
include/data/: ClientData.hpp  DataStructs.hpp  SkillStructs.hpp  SpecialStructs.hpp
include/events/: Event.hpp  EventDispatcher.hpp  EventHandler.hpp  EventQueue.hpp
include/game_server/: Authenticator.hpp  CharacterManager.hpp  ChunkServerWorker.hpp  ClientData.hpp  GameServer.hpp
include/handlers/: MessageHandler.hpp
include/helpers/: Config.hpp  Database.hpp  Logger.hpp
include/network/: ChunkServerWorker.hpp  ClientSession.hpp  NetworkManager.hpp
include/services/: Authenticator.hpp  CharacterManager.hpp  ChunkManager.hpp  ClassSpawnZoneManager.hpp  ClientManager.hpp  DialogueQuestManager.hpp  GameConfigService.hpp  GameServices.hpp  ItemManager.hpp  MobManager.hpp  NPCManager.hpp  SpawnManager.hpp  SpawnZoneManager.hpp
include/utils/: Config.hpp  Database.hpp  Generators.hpp  JSONParser.hpp  Logger.hpp  ResponseBuilder.hpp  Scheduler.hpp  ThreadPool.hpp  TimeConverter.hpp  TimeUtils.hpp  TimestampUtils.hpp
src/: config.json  main.cpp
src/data/: ClientData.cpp
src/events/: Event.cpp  EventDispatcher.cpp  EventHandler.cpp  EventQueue.cpp
src/game_server/: Authenticator.cpp  CharacterManager.cpp  ChunkServerWorker.cpp  ClientData.cpp  GameServer.cpp
src/handlers/: MessageHandler.cpp
src/helpers/: Config.cpp  Database.cpp  Logger.cpp
src/network/: ChunkServerWorker.cpp  ClientSession.cpp  NetworkManager.cpp
src/services/: Authenticator.cpp  CharacterManager.cpp  ChunkManager.cpp  ClassSpawnZoneManager.cpp  ClientManager.cpp  DialogueQuestManager.cpp  GameConfigService.cpp  ItemManager.cpp  MobManager.cpp  NPCManager.cpp  SpawnManager.cpp  SpawnZoneManager.cpp
src/utils/: Config.cpp  Database.cpp  Generators.cpp  JSONParser.cpp  Logger.cpp  Scheduler.cpp  ThreadPool.cpp  TimeConverter.cpp  TimeUtils.cpp  TimestampUtils.cpp
